--- a/index.html
+++ b/index.html
@@ -35,20 +35,28 @@
       border-radius: 12px;
       font-size: 1.8rem;
       font-weight: bold;
-      position: relative;
       perspective: 1000px;
+      position: relative;
+      overflow: hidden;
+      width: 90px;
     }
 
-    .time {
-      display: inline-block;
-      transform-style: preserve-3d;
-      animation: flip 1s ease-in-out;
+    .digit {
+      display: block;
+      font-size: 2rem;
+      font-weight: bold;
+      line-height: 1;
+    }
+
+    .flip {
+      animation: flip 0.6s ease forwards;
     }
 
     @keyframes flip {
       0%   { transform: rotateX(0deg); }
-      50%  { transform: rotateX(-180deg); }
-      100% { transform: rotateX(-360deg); }
+      50%  { transform: rotateX(-90deg); opacity: 0; }
+      51%  { transform: rotateX(90deg); opacity: 0; }
+      100% { transform: rotateX(0deg); opacity: 1; }
     }
 
     .label {
@@ -76,10 +84,10 @@
   <h1>Countdown to Shreya's Birthday 🎂</h1>
 
   <div class="countdown" id="countdown">
-    <div class="time-box"><span class="time" id="days">0</span><span class="label">Days</span></div>
-    <div class="time-box"><span class="time" id="hours">0</span><span class="label">Hours</span></div>
-    <div class="time-box"><span class="time" id="minutes">0</span><span class="label">Minutes</span></div>
-    <div class="time-box"><span class="time" id="seconds">0</span><span class="label">Seconds</span></div>
+    <div class="time-box"><span class="digit" id="days">0</span><span class="label">Days</span></div>
+    <div class="time-box"><span class="digit" id="hours">0</span><span class="label">Hours</span></div>
+    <div class="time-box"><span class="digit" id="minutes">0</span><span class="label">Minutes</span></div>
+    <div class="time-box"><span class="digit" id="seconds">0</span><span class="label">Seconds</span></div>
   </div>
 
   <div id="birthday-message">🎉 Happy Birthday Shreya! 🎉<br>
@@ -95,6 +103,7 @@
       if (distance <= 0) {
         document.getElementById("countdown").style.display = "none";
         document.getElementById("birthday-message").style.display = "block";
+        launchConfetti();
         return;
       }
 
@@ -103,21 +112,60 @@
       const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
       const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-      document.getElementById("days").innerText = days;
-      document.getElementById("hours").innerText = hours;
-      document.getElementById("minutes").innerText = minutes;
-      document.getElementById("seconds").innerText = seconds;
+      setTime("days", days);
+      setTime("hours", hours);
+      setTime("minutes", minutes);
+      setTime("seconds", seconds);
+    }
 
-      // trigger flip animation
-      document.querySelectorAll(".time").forEach(el => {
-        el.style.animation = "none";
-        el.offsetHeight; // trigger reflow
-        el.style.animation = null;
-      });
+    function setTime(id, newVal) {
+      const el = document.getElementById(id);
+      if (el.innerText !== String(newVal)) {
+        el.innerText = newVal;
+        el.classList.remove("flip");
+        void el.offsetWidth; // reflow trick
+        el.classList.add("flip");
+      }
     }
 
     setInterval(updateCountdown, 1000);
     updateCountdown();
+
+    // 🎉 Confetti effect
+    function launchConfetti() {
+      const duration = 3 * 1000;
+      const end = Date.now() + duration;
+
+      (function frame() {
+        const colors = ["#ff0", "#0f0", "#0ff", "#f0f", "#fff"];
+        const confetti = document.createElement("div");
+        confetti.innerHTML = "🎉";
+        confetti.style.position = "fixed";
+        confetti.style.left = Math.random() * 100 + "vw";
+        confetti.style.top = "-10px";
+        confetti.style.fontSize = Math.random() * 20 + 20 + "px";
+        confetti.style.animation = "fall 3s linear forwards";
+        document.body.appendChild(confetti);
+
+        setTimeout(() => confetti.remove(), 3000);
+
+        if (Date.now() < end) {
+          requestAnimationFrame(frame);
+        }
+      })();
+    }
+
+    // Confetti fall animation
+    const style = document.createElement("style");
+    style.innerHTML = `
+      @keyframes fall {
+        to {
+          transform: translateY(100vh) rotate(720deg);
+          opacity: 0;
+        }
+      }
+    `;
+    document.head.appendChild(style);
   </script>
 </body>
 </html>
